UX: prevents non-lightboxed images in quotes from stretching/squeezing (#8021)

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -235,6 +235,8 @@ blockquote {
   // !important here otherwise it won't work.
   img {
     max-width: 100% !important;
+    object-fit: cover;
+    object-position: top;
   }
 }
 
